tests/snapshot/snapshots/snapshot__error_stderr_record_type_repeated_field.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: invalid record literal
  ┌─ [INPUTS_PATH]/errors/record_type_repeated_field.ncl:3:24
  │
3 │ ({foo.bar.baz = "a"} : {foo : String, foo : Number})
  │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │                         │             │
  │                         │             second occurrence
  │                         first occurrence
  │
  = A record type is a literal composed only of type annotations, of the form `<field>: <type>`.
  = Repeated field names are forbidden


