tests/snapshot/snapshots/snapshot__error_stderr_subcontract_nested_custom_diagnostics.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: contract broken by a value: child's message
   ┌─ [INPUTS_PATH]/errors/subcontract_nested_custom_diagnostics.ncl:19:8
   │
19 │ null | ParentContract
   │        -------------- expected type
   │
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ value
   │ ----- evaluated to this value
   │
   = child's note

note: from a parent contract violation: parent's message
 = parent's note


