tests/snapshot/snapshots/snapshot__error_subcontract_nested_custom_diagnostics.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot
---
error: contract broken by a value: child\'s message
   ┌─ [INPUTS_PATH]/errors/subcontract_nested_custom_diagnostics.ncl:17:8
   │
17 │ null | ParentContract
   │        -------------- expected type
   │
   ┌─ <unknown> (generated by evaluation):1:1
   │
 1 │ value
   │ ----- evaluated to this value
   │
   = child's note

note: from a parent contract violation: parent\'s message
 = parent's note


