tests/snapshot/snapshots/snapshot__error_value_contract_violation.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot
---
error: contract broken by the value of `foo`: no reason
  ┌─ [INPUTS_PATH]/errors/value_contract_violation.ncl:1:36
  │
1 │ { foo | std.FailWith "no reason" = 1 }.foo
  │         ------------------------   ^ applied to this expression
  │         │                           
  │         expected type


