tests/snapshot/snapshots/snapshot__export_stdout_nested_record.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot.stdout
---
{
  "a_num": 1,
  "a_record": {
    "even": {
      "more": {
        "nested": "record"
      }
    }
  },
  "an_array": [
    2,
    "other string",
    true,
    [
      "nested",
      "array"
    ],
    {
      "nested": "record"
    }
  ],
  "booooool": false,
  "some_str": "this is a string"
}
